<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seniorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <TextView
        android:id="@+id/tvMyName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="31dp"
        android:text="@string/my_name"
        app:layout_constraintBottom_toTopOf="@+id/tvSeniores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMyRa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/my_ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMyName2" />

    <TextView
        android:id="@+id/tvSeniores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="49dp"
        android:text="@string/tvSeniores"
        app:layout_constraintBottom_toTopOf="@+id/etNome2"
        app:layout_constraintEnd_toEndOf="@+id/tvMyRa2"
        app:layout_constraintTop_toBottomOf="@+id/tvMyName2" />

    <EditText
        android:id="@+id/etNome2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etNascimento2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeniores" />

    <EditText
        android:id="@+id/etNascimento2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/etNascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="8"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etBairro2"
        app:layout_constraintStart_toStartOf="@+id/etNome2"
        app:layout_constraintTop_toBottomOf="@+id/etNome2" />

    <EditText
        android:id="@+id/etBairro2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/etBairro"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etCardiaco"
        app:layout_constraintStart_toStartOf="@+id/etNascimento2"
        app:layout_constraintTop_toBottomOf="@+id/etNascimento2" />

    <Button
        android:id="@+id/btnCadastrar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="168dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etCardiaco"
        app:layout_constraintTop_toBottomOf="@+id/etCardiaco" />

    <CheckBox
        android:id="@+id/etCardiaco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="56dp"
        android:text="@string/etCardiaco"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar2"
        app:layout_constraintStart_toStartOf="@+id/etBairro2"
        app:layout_constraintTop_toBottomOf="@+id/etBairro2" />
</androidx.constraintlayout.widget.ConstraintLayout>